<resources>
    <string name="app_name">tart_attack</string>
    <string name="boton_Clasicas">CLÁSICAS</string>
    <string name="boton_Veganas">VEGANAS</string>
    <string name="boton_Nuevas">NUEVAS</string>
    <string name="boton_Gluten">SIN GLUTEN</string>
    <string name="boton_Personalizadas">PERSONALIZADAS</string>
    <string name="boton_Regalos">GUÍA DE REGALOS</string>
    <string name="boton_Cuenta">Mi Cuenta</string>
    <string name="boton_Seguir">Síguenos</string>
    <string name="boton_Cliente">Atención al Cliente</string>
    <string name="boton_Config">Configuración de App</string>
    <string name="compras_realizadas">Para compras realizadas entre el 01/05 al 27/05/2022, hasta un 15% de descuento para nuestros miembros</string>
    <string name="regala_tarta">REGALA UNA TARTA POR EL DIA DE LA MADRE! \n\n¡todos los sabores los encontraras aqui!</string>
    <string name="prueba_nueva">Prueba la nueva tarta sabor Fresa</string>
    <string name="treschocolates">Sabor tres chocolates</string>
    <string name="fresa">Sabor fresa</string>
    <string name="dulceleche">Sabor dulce de leche</string>
    <string name="Clasicas_imgbtn">CLÁSICAS</string>
    <string name="envio">Entrega gratuita para miembros en pedidos superiores a 30 €</string>
    <string name="tart_choclat">Tarta de chocolate</string>
    <string name="precio_tc">15.99 € </string>
    <string name="tart_de_queso">Tarta de queso</string>
    <string name="precio_tq">12.99 € </string>
    <string name="tarta_fresa">Tarta de fresa</string>
    <string name="precio_tf">14.99 € </string>
    <string name="tart_manzana">Tarta de manzana</string>
    <string name="precio_tm">10.99 € </string>
    <string name="recomendadas">Recomendadas para ti</string>
    <string name="iniciar_sesion">Iniciar Sesion </string>
    <string name="Registrar">Registrar </string>
    <string name="Acceder_Google">Acceder con Google</string>
    <string name="prefs_file" translatable="false">com.example.firestore_app_base.PREFERENCE_FILE_KEY</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Cerrar_Sesion">Cerrar Sesion</string>
    <string name="Tartas_Clasicas">Tartas Clasicas</string>
    <string name="Tartas_SG">Tartas Sin Gluten</string>
    <string name="Tartas_Veganas">Tartas Veganas</string>
    <string name="Tartas_Personalizadas">Tartas Personalizadas</string>
    <string name="Elija_cant_sabores">Elija cantidad de sabores que desea añadir, con un maximo de 3 sabores</string>
    <string name="cantidad_sabores">Elija cantidad</string>
    <string name="sabor">Elija sabor que desea</string>
    <string name="add_cesta">Añadir a la cesta</string>
    <string name="tramitar_pedido">Tramitar pedido</string>
    <string name="Limpiar_cesta">Eliminar productos</string>
    <string name="Realizar_pago">Buy now</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="eliminar_datos">Eliminar datos</string>
    <string name="compra_exitosa">Compra realizada exitosamente, muchas gracias por confiar en nosotros</string>
    <string name="inicio">ir a pagina principal</string>


</resources>