<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="120dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="199dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgbuttprincipal" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="334dp"
        android:layout_height="530dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/buttClas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Clasicas"
            android:textColor="#050404"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttVeg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Veganas"
            android:textColor="#050404"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Nuevas"
            android:textColor="#050404"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttGlu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Gluten"
            android:textColor="#050404"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Regalos"
            android:textColor="#050404"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Cuenta"
            android:textColor="#0C0C0C"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttSeguir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Seguir"
            android:textColor="#0C0C0C"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Cliente"
            android:textColor="#0C0C0C"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4F3E466"
            android:text="@string/boton_Config"
            android:textColor="#0C0C0C"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>