<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity4">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="#A4F3E466">


            <ImageButton
                android:id="@+id/menubotoni2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#A4F3E466"
                app:srcCompat="@drawable/menu_hamburguesa" />

            <TextView
                android:id="@+id/clasica"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/Clasicas_imgbtn"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#A4F3E466"
                app:srcCompat="@drawable/busqueda" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#A4F3E466"
                app:srcCompat="@drawable/usuario" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#A4F3E466"
                app:srcCompat="@drawable/corazon" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#A4F3E466"
                app:srcCompat="@drawable/carrito_de_compras" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#A4F3E466"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/envio"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="149dp">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:backgroundTint="#FEFEFE"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/tarta_chocolate" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"

                android:backgroundTint="#FEFEFE"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/tarta_de_queso" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tart_choclat"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tart_de_queso"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/precio_tc" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/precio_tq" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FEFEFE">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:backgroundTint="#FEFEFE"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/tarta_crema_vainilla_fresa_encima_74190_2510" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:backgroundTint="#FEFEFE"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/tarta_manzana_sobre_fondo_blanco_67394_227" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tarta_fresa"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="621dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tart_manzana"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="342dp"
                tools:layout_editor_absoluteY="621dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/precio_tf" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/precio_tm" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>